--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -4,7 +4,7 @@
 }
 
 .auth-content {
-  padding: 60px 42px 20px;
+  padding: 0;
 
   -moz-transition: padding-top 0.4s;
   -webkit-transition: padding-top 0.4s;
