--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,12 +1,12 @@
 // Page Properties
 $fonts: 'proxima nova', 'montserrat', Arial, Helvetica, sans-serif;
-$default-border-radius: 3px;
-$container-width: 400px;
+$default-border-radius: 25px;
+$container-width: 300px;
 $container-min-width: 300px;
 $num-tabs: 5;
 
 // Font Size
-$font-size: 14px;
+$font-size: 12px;
 $font-size-small: 13px;
 $font-size-header: 15px;
 $font-size-footer: 12px;
@@ -18,7 +18,7 @@ $font-weight-labels: 600;
 $font-weight-header: 600;
 
 // Theme Color
-$primary-bg-color: #fff;
+$primary-bg-color: #f3efe7;
 $secondary-bg-color: #f9f9f9;
 
 // Text Color
@@ -32,15 +32,15 @@ $error-text-color: #e34843;
 
 // Button Color
 $icon-button-bg-color: #fff;
-$button-bg-color: #fbfbfb;
+$button-bg-color: #48a38d;
 $dark-button-bg-color: #929292;
-$primary-button-bg-color: #007dc1;
+$primary-button-bg-color: #48a38d;
 $success-button-bg-color: #4cbf9c;
 $negative-button-bg-color: #c35151;
 $disabled-button-text-color: #aaa;
 $disabled-primary-button-text-color: #fff;
 $disabled-primary-button-bg-color: #63b1d7;
-$disabled-primary-border-color: #3096c9;
+$disabled-primary-border-color: transparent;
 
 // Divider Colors
 $header-divider-color: #ddd;
@@ -65,7 +65,7 @@ $microsoft-border-color: #447199;
 
 // Default Custom Button Colors
 $default-custom-button-background-color: #ff5f73;
-$default-custom-button-border-color: #d6001a;
+$default-custom-button-border-color: transparent;
 
 // IDP PIV Button Colors
 $piv-button-background-color: #fff;
@@ -75,16 +75,16 @@ $piv-action-button-border-text-color: #124a94;
 
 // Button Size
 $input-height: 40px;
-$button-height: 50px;
+$button-height: 40px;
 $button-line-height: $input-height - 4px;
 $button-padding: 0 15px;
 
 // Input field
 $input-bg-color: #fff;
-$input-border-color: #bbb;
-$input-border-color-hover: #888;
-$input-border-color-focus: #0074b3;
-$input-shadow-color-focus: #51cbee;
+$input-border-color: transparent;
+$input-border-color-hover: transparent;
+$input-border-color-focus: transparent;
+$input-shadow-color-focus: transparent;
 $input-icons-color: #a7a7a7;
 
 // Modal
