--- a/assets/sass/modules/_btns.scss
+++ b/assets/sass/modules/_btns.scss
@@ -11,13 +11,16 @@ $od-secondary-button-action-text-color: #124a94;
 .button,
 // link-button is a link that looks like a button
 .button.link-button {
-  display: inline-block;
+  display: flex;
   height: $input-height;
   line-height: $button-line-height;
   padding: $button-padding;
   border: 1px solid;
-  border-radius: $border-radius-default;
+  border-radius: $default-border-radius;
   font-size: $font-size;
+  align-items: center;
+  box-shadow: -5px -5px 10px #fff, 6px 6px 12px rgb(86 132 115 / 50%), inset 0 0 0 1px rgb(255 255 255 / 20%);
+  background-image: linear-gradient(315deg,rgba(0,0,0,0.6) 0%,rgba(255,255,255,0) 100%);
   box-sizing: border-box;
   -webkit-appearance: none;
 }
